--- a/user/smartagri/package.json
+++ b/user/smartagri/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "recharts": "^2.2.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
