--- a/user/smartagri/package.json
+++ b/user/smartagri/package.json
@@ -6,6 +6,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,6 +19,7 @@
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
@@ -24,6 +28,7 @@
     "react-toastify": "^9.1.1",
     "recharts": "^2.2.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
