--- a/admin/adminsmartagri/composer.json
+++ b/admin/adminsmartagri/composer.json
@@ -13,6 +13,7 @@
         "laravel/passport": "^11.3",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.2",
         "livewire/livewire": "^2.5"
     },
     "require-dev": {
