--- a/admin/adminsmartagri/package.json
+++ b/admin/adminsmartagri/package.json
@@ -5,11 +5,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.0.6",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.10.3",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
